# Stellaroot

./: .bazelrc  .gitignore  .kluctl.yaml  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  deployment.yaml  go.mod  go.sum  readme.md
kubernetes/: kind-config.yaml  local-cluster.md
kubernetes/cert-manager/chart/: helm-chart.yml  helm-values.yaml
kubernetes/cert-manager/setup/: kustomization.yml
kubernetes/configs/: local.yaml
kubernetes/deployment/: deployment.yaml
kubernetes/deployment/cert-manager/: deployment.yml
kubernetes/deployment/cert-manager/namespace/: namespace.yml
kubernetes/deployment/cert-manager/setup/: kustomization.yml  letsencrypt-staging-clusterissuer.yaml
kubernetes/deployment/configs/: common.yaml  local.yaml
kubernetes/deployment/images/: local.yaml
kubernetes/deployment/kgateway/: deployment.yml
kubernetes/deployment/kgateway/chart/: helm-chart.yaml
kubernetes/deployment/kgateway/crds/: helm-chart.yaml  kustomization.yaml
kubernetes/deployment/kgateway/namespace/: namespace.yml
kubernetes/deployment/kgateway/setup/: gateway.yaml  nodeport-gw-params.yaml
kubernetes/deployment/nats/: deployment.yml
kubernetes/deployment/nats/chart/: helm-chart.yaml
kubernetes/deployment/nats/namespace/: namespace.yaml
kubernetes/deployment/services/: deployment.yaml
kubernetes/deployment/services/dashboard/: deployment.yaml  route.yaml  service.yaml
kubernetes/deployment/services/fakedata/: job.yaml
kubernetes/deployment/services/namespace/: namespace.yaml
libs/constant/: BUILD.bazel  constants.yaml  constants_test.go  descriptors.go
libs/metadata/: BUILD.bazel  README.md  cache.go  client.go  config.go  connection.go  descriptors.go  descriptors_test.go  events.go  main.go  metadata_test.go  players.go  queries.go  servers.go  types.go  watchers.go
libs/permission_grpc/: BUILD.bazel  permission.proto
libs/schema/: BUILD.bazel  schema.go
libs/schema/protos/: BUILD.bazel  schema.proto
services/dashboard/: BUILD.bazel  main.go
services/dashboard/static/css/: dashboard.css
services/dashboard/static/js/: dashboard.js  players.js  servers.js
services/dashboard/templates/: BUILD.bazel  base.templ  base_templ.go  index.templ  index_templ.go  players.templ  players_templ.go  servers.templ  servers_templ.go  viewmodels.go
services/permission/: BUILD.bazel  main.go
tools/: bazel_stamp_vars.sh  build-dev.sh  build-release.sh  tools.go
tools/fakedata/: BUILD.bazel  main.go
tools/genconstants/: BUILD.bazel  README.md  main.go
