load("@rules_go//go:def.bzl", "go_library", "go_test")

exports_files(
    ["constants.yaml"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "generate_constants",
    srcs = ["constants.yaml"],
    outs = ["constants_gen.go"],
    cmd = "$(location //tools/genconstants:genconstants) -in $(location constants.yaml) -out $@",
    tools = ["//tools/genconstants"],
)

genrule(
    name = "generate_annotation_descriptors",
    srcs = ["constants.yaml"],
    outs = ["descriptors_gen.go"],
    cmd = "$(location //tools/genconstants:genconstants) -mode descriptors -in $(location constants.yaml) -out $@ -package constant",
    tools = ["//tools/genconstants"],
)

go_library(
    name = "constant",
    srcs = [
        "descriptors.go",
        ":generate_annotation_descriptors",
        ":generate_constants",
    ],
    importpath = "github.com/bafbi/stellaroot/libs/constant",
    visibility = ["//visibility:public"],
)

go_test(
    name = "constant_test",
    srcs = ["constants_test.go"],
    embed = ["constant"],
)
