load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_load")
load("@tar.bzl", "mtree_mutate", "mtree_spec", "tar", "mutate")

go_library(
    name = "dashboard_lib",
    srcs = ["main.go"],
    importpath = "github.com/bafbi/stellaroot/services/dashboard",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/metadata",
        "//libs/schema",
        "//services/dashboard/templates",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "dashboard",
    embed = [":dashboard_lib"],
    visibility = ["//visibility:public"],
)

tar(
    name = "dashboard_bin_tar",
    srcs = [":dashboard"],
    mutate = mutate(
        strip_prefix = package_name(),
        prefix = "app",
    ),
)

filegroup(
    name = "static_files",
    srcs = glob(["static/**"]),
    visibility = ["//visibility:private"],
)

tar(
    name = "static_tar",
    srcs = [":static_files"],
    mutate = mutate(
        strip_prefix = package_name(),
        prefix = "app",
    ),
)

oci_image(
    name = "dashboard_image",
    base = "@distroless_base",
    entrypoint = ["/app/dashboard"],
    workdir = "/app",
    tars = [
        ":dashboard_bin_tar",
        ":static_tar",
    ],
    labels = {
        "org.opencontainers.image.title": "Stellaroot Dashboard",
        "org.opencontainers.image.version": "{STABLE_VERSION_TAG}",
        "org.opencontainers.image.revision": "{STABLE_GIT_COMMIT}",
        "org.opencontainers.image.authors": "Bafbi bafbi3@gmail.com",
        "org.opencontainers.image.description": "Dashboard for Stellaroot Minecraft network",
        "org.opencontainers.image.source": "https://github.com/Bafbi/Stellaroot",
        "org.opencontainers.image.created": "{BUILD_TIMESTAMP_RFC3339}",
        "stellaroot.build.mode": "{STABLE_RELEASE_MODE}",
        "stellaroot.git.branch": "{STABLE_GIT_BRANCH}"
    },
)

# Rule to push the OCI image to GitHub Container Registry
oci_push(
    name = "push_dashboard_to_ghcr",
    image = ":dashboard_image",

    repository = "ghcr.io/bafbi/stellaroot/dashboard",

    remote_tags = ["{STABLE_VERSION_TAG}"],

    visibility = ["//visibility:public"], # This is for the Bazel target visibility
)

oci_load(
    name = "load_dashboard_image",
    image = ":dashboard_image",
    # This will load the image into your local Docker daemon.
    # Useful for testing locally before pushing to a remote registry.
    repo_tags = [
        "stellaroot/dashboard:{STABLE_VERSION_TAG}",
    ],
)
