load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_load")
load("@tar.bzl", "mtree_mutate", "mtree_spec", "tar")
load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/bafbi/stellaroot/services/dashboard",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/metadata",
        "//libs/schema",
        "//services/dashboard/templates",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "dashboard",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

# Mtree spec for the binary
mtree_spec(
    name = "bin_spec",
    srcs = [":dashboard"],
)

# Mtree mutation for the binary
mtree_mutate(
    name = "bin_mtree",
    mtree = ":bin_spec",
    strip_prefix = package_name(),
    package_dir = "app",
)

# Simple tar for the binary
tar(
    name = "bin_tar",
    srcs = [":dashboard"],
    mtree = ":bin_mtree",
)

filegroup(
    name = "static_files",
    srcs = glob(["static/**"]),
    visibility = ["//visibility:private"],
)

# Mtree spec for static files
mtree_spec(
    name = "static_spec",
    srcs = [":static_files"],
)

# Mtree mutation for static files
mtree_mutate(
    name = "static_mtree",
    mtree = ":static_spec",
    strip_prefix = package_name(),
    package_dir = "app",
)

# Simple tar for static files
tar(
    name = "static_tar",
    srcs = [":static_files"],
    mtree = ":static_mtree",
)

# Generate labels file with proper stamp handling using expand_template
expand_template(
    name = "labels",
    out = "labels.txt",
    stamp_substitutions = {
        "0.0.0": "{{STABLE_VERSION_TAG}}",
        "unknown": "{{STABLE_GIT_COMMIT}}",
        "1970-01-01T00:00:00Z": "{{BUILD_TIMESTAMP_RFC3339}}",
        "dev": "{{STABLE_RELEASE_MODE}}",
        "main": "{{STABLE_GIT_BRANCH}}",
    "__VCS__": "{{STABLE_VCS}}",
    "__GIT_TAG__": "{{STABLE_GIT_TAG}}",
    "__GIT_DIRTY__": "{{STABLE_GIT_DIRTY}}",
    "__JJ_BOOKMARKS__": "{{STABLE_JJ_BOOKMARKS}}",
    "__IMAGE_VERSION__": "{{STABLE_IMAGE_VERSION}}",
    },
    template = [
        "org.opencontainers.image.title=Stellaroot Dashboard",
        "org.opencontainers.image.version=0.0.0",
        "org.opencontainers.image.revision=unknown",
        "org.opencontainers.image.authors=Bafbi bafbi3@gmail.com",
        "org.opencontainers.image.description=Dashboard for Stellaroot Minecraft network",
        "org.opencontainers.image.source=https://github.com/Bafbi/Stellaroot",
        "org.opencontainers.image.created=1970-01-01T00:00:00Z",
        "stellaroot.build.mode=dev",
        "stellaroot.git.branch=main",
    "stellaroot.vcs=__VCS__",
    "stellaroot.git.tag=__GIT_TAG__",
    "stellaroot.git.dirty=__GIT_DIRTY__",
    "stellaroot.jj.bookmarks=__JJ_BOOKMARKS__",
    "stellaroot.image.version=__IMAGE_VERSION__",
    ],
)

# Generate tags file with proper stamp handling using expand_template
expand_template(
    name = "tags",
    out = "tags.txt",
    stamp_substitutions = {"0.0.0": "{{STABLE_VERSION_TAG}}"},
    template = [
        "0.0.0",
        "latest",
    ],
)

# Generate repo_tags file for oci_load with full repository
expand_template(
    name = "repo_tags",
    out = "repo_tags.txt",
    stamp_substitutions = {"0.0.0": "{{STABLE_VERSION_TAG}}"},
    template = [
        "stellaroot/dashboard:0.0.0",
        "stellaroot/dashboard:latest",
    ],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/app/dashboard_/dashboard"],
    workdir = "/app",
    tars = [
        ":bin_tar",
        ":static_tar",
    ],
    labels = ":labels",
)

# Rule to push the OCI image to GitHub Container Registry
oci_push(
    name = "push_to_ghcr",
    image = ":image",
    repository = "ghcr.io/bafbi/stellaroot/dashboard",
    remote_tags = ":tags",
    visibility = ["//visibility:public"], # This is for the Bazel target visibility
)

oci_load(
    name = "load",
    image = ":image",
    # This will load the image into your local Docker daemon.
    # Useful for testing locally before pushing to a remote registry.
    repo_tags = ":repo_tags",
)

# Bazel target to load the dashboard image into Kind cluster for local development
# Run with: bazel run //services/dashboard:load_to_kind
genrule(
    name = "load_to_kind_script",
#     srcs = [":load"],
    outs = ["load_to_kind.sh"],
    cmd = """
cat > $@ << 'EOF'
#!/bin/bash
set -euo pipefail

CLUSTER_NAME="stellaroot-local"
echo "Loading dashboard image to Kind cluster..."

# Check if Kind cluster exists
if ! kind get clusters | grep -q "^$${CLUSTER_NAME}$$"; then
    echo "Error: Kind cluster '$${CLUSTER_NAME}' not found."
    echo "Please create the cluster first with:"
    echo "  kind create cluster --name $${CLUSTER_NAME} --config kubernetes/kind-config.yaml"
    exit 1
fi

# Build and load the image to local Docker daemon
echo "Building and loading dashboard image to local Docker..."
bazel run //services/dashboard:load

# Get version tag
# VERSION_TAG=$$(bazel run //tools:bazel_stamp_vars.sh 2>/dev/null | awk '/^STABLE_VERSION_TAG /{print $$2}' || true)
# if [ -z "$$VERSION_TAG" ]; then
#     if command -v jj >/dev/null 2>&1; then
#         VERSION_TAG="dev-$$(jj log -r @ -n 1 --no-graph -T 'commit_id.short()' 2>/dev/null || echo local)"
#     else
#         VERSION_TAG="dev-$$(git rev-parse --short HEAD 2>/dev/null || echo local)"
#     fi
# fi
VERSION_TAG=latest

IMAGE_NAME="stellaroot/dashboard:$${VERSION_TAG}"
echo "Loading image $${IMAGE_NAME} to Kind cluster $${CLUSTER_NAME}..."

# Load the image into Kind
if kind load docker-image "$${IMAGE_NAME}" --name "$${CLUSTER_NAME}"; then
    echo "✅ Successfully loaded $${IMAGE_NAME} to Kind cluster $${CLUSTER_NAME}"
else
    echo "❌ Failed to load image to Kind cluster"
    exit 1
fi
EOF
chmod +x $@
    """,
    executable = True,
    visibility = ["//visibility:public"],
    stamp = 1,
)

# Wrapper to make the script runnable with bazel run
genrule(
    name = "load_to_kind",
    srcs = [":load_to_kind_script"],
    outs = ["run_load_to_kind.sh"],
    cmd = "cp $< $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)
