load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "schema_proto",
    srcs = ["schema.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "schema_go_proto",
    importpath = "github.com/bafbi/stellaroot/libs/schema/protos",
    proto = ":schema_proto",
    visibility = ["//visibility:public"],
)
