load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "templates",
    srcs = [
        "base_templ.go",
        "index_templ.go",
        "players_templ.go",
        "servers_templ.go",
    ],
    importpath = "github.com/bafbi/stellaroot/services/dashboard/templates",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_a_h_templ//:templ",
        "@com_github_a_h_templ//runtime",
    ],
)
